[tool.poetry]
name = "flappyblock"
version = "0.1.0"
description = ""
authors = ["Isaac Parker <isaac@linux.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

